--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "favorite-icon-status",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Small library for status manipulating desktop favicon",
   "main": "dist/index.common.js",
   "module": "dist/index.esm.js",
@@ -10,6 +10,10 @@
     "email": "hcodes@yandex.ru",
     "url": "https://github.com/favorite-icon/favorite-icon-status"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/favorite-icon/favorite-icon-status.git"
+  },  
   "license": "MIT",
   "keywords": [
     "favorite icon",
